fixed header wrapping and added a more modular, switchable sidebar

--- a/_sass/scaling.scss
+++ b/_sass/scaling.scss
@@ -25,7 +25,7 @@
     }
     #content-cnt {
       float: none;
-      width: 80%;
+      width: 86%;
       max-width:none;
       border-left-width: 0;
     }
@@ -54,4 +54,30 @@
     .headerItem {
       font-size: 1em;
     }
+    div.post-preview {
+      padding: 0;
+    }
+}
+
+// edit this width to change when the header wraps
+@media only screen and (max-width: 500px) {
+  .headerItem {
+    display: inline-block;
+    float: none;
+    padding-top: 6px;
+  }
+  .headerRight {
+    float: none;
+    text-align: center;
+  }
+  #namelink {
+    float: none;
+    display: inline-block;
+    padding: 12px 6px 6px 6px;
+    font-size: 0.75em;
+  }
+  #namelink-wrapper {
+    width: 100%;
+    text-align: center;
+  }
 }
